force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/XC_CM_CountryLegalEntityAssociation__mdt.object-meta.xml
<CustomObject>
    <label>Country Legal Entity Association</label>
    <pluralLabel>Country Legal Entity Association</pluralLabel>
</CustomObject>