force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/giic_Region__c.field-meta.xml
<CustomField>
    <fullName>giic_Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
                <default>true</default>
                <label>APAC</label>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Iberia</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>RoE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>