force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/RemoteQuoteFlow__c.field-meta.xml
<CustomField>
    <fullName>RemoteQuoteFlow__c</fullName>
    <label>Remote Quote Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complex</fullName>
                <default>true</default>
                <label>Complex</label>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Interactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>