force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_Category__c.field-meta.xml
<CustomField>
    <fullName>XC_Category__c</fullName>
    <description>The category of the Legal Entity (B2C/B2B/B2G)</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2C</fullName>
                <default>true</default>
                <label>B2C</label>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>