force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_Country__c.field-meta.xml
<CustomField>
    <fullName>XC_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United Kingdom</fullName>
                <default>true</default>
                <label>United Kingdom</label>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Romania</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
                <isActive>false</isActive>
                <label>USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>