force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_EmailToAddress__c.field-meta.xml
<CustomField>
    <fullName>XC_EmailToAddress__c</fullName>
    <description>RB_CRM_Both_Y : It identify the case support email for the legalentity</description>
    <label>Email To Address</label>
    <type>Email</type>
</CustomField>