force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_GuestAddress__c.field-meta.xml
<CustomField>
    <fullName>XC_GuestAddress__c</fullName>
    <description>Default Address for eMobility Guest User without data. Format: StreetType;Address;StreetNumber;ZipCode;City;Province;Country</description>
    <label>Guest Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>