force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>XC_LegalEntity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EndesaX</fullName>
                <default>true</default>
                <label>EndesaX</label>
            </value>
            <value>
                <fullName>JuicenetLimited</fullName>
            </value>
            <value>
                <fullName>EnelXNorthAmericaInc</fullName>
            </value>
            <value>
                <fullName>EnelXRomania</fullName>
                <label>Enel X Romania S.R.L.</label>
            </value>
            <value>
                <fullName>Codensa</fullName>
            </value>
            <value>
                <fullName>EnelDistribucion</fullName>
            </value>
            <value>
                <fullName>EnelX</fullName>
            </value>
            <value>
                <fullName>EnelXItalia</fullName>
                <label>Enel X Italia S.p.A.</label>
            </value>
            <value>
                <fullName>SFM</fullName>
            </value>
            <value>
                <fullName>EnelSole</fullName>
                <label>Enel Sole</label>
            </value>
            <value>
                <fullName>Cogenio</fullName>
                <label>CoGenio</label>
            </value>
            <value>
                <fullName>EnelXMSP</fullName>
            </value>
            <value>
                <fullName>EnelXMobility</fullName>
            </value>
            <value>
                <fullName>EnelXSrl</fullName>
            </value>
            <value>
                <fullName>YouSaveSpA</fullName>
            </value>
            <value>
                <fullName>ESCoComuniSrl</fullName>
            </value>
            <value>
                <fullName>EnelXMobilityHolding</fullName>
            </value>
            <value>
                <fullName>EnelXMobilityItalia</fullName>
            </value>
            <value>
                <fullName>EnelXMobilitySpain</fullName>
            </value>
            <value>
                <fullName>EnelXMobilityRomania</fullName>
            </value>
            <value>
                <fullName>EnelXMobilityAmerica</fullName>
            </value>
            <value>
                <fullName>EnelXMobilityChile</fullName>
            </value>
            <value>
                <fullName>EnelXMobilityUK</fullName>
            </value>
            <value>
                <fullName>EnelXMobilityBrasil</fullName>
            </value>
            <value>
                <fullName>EXBRA_SA_Rio_de_Janeiro_RJ</fullName>
                <label>ENEL X BRASIL S.A Rio de Janeiro (RJ)</label>
            </value>
            <value>
                <fullName>EXBRA_SA_Fortaleza_CE</fullName>
                <label>ENEL X BRASIL S.A Fortaleza (CE)</label>
            </value>
            <value>
                <fullName>EXBRA_SA_Goiania_GO</fullName>
                <label>ENEL X BRASIL S.A Goiania (GO)</label>
            </value>
            <value>
                <fullName>EXBRA_SA_Paulo_SP</fullName>
                <label>ENEL X BRASIL S.A São Paulo (SP)</label>
            </value>
            <value>
                <fullName>EndesaSoluciones</fullName>
            </value>
            <value>
                <fullName>LUZ_SA_Niteroi_RJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>