force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_LegalEntityGroup__c.field-meta.xml
<CustomField>
    <fullName>XC_LegalEntityGroup__c</fullName>
    <description>Name of the group of LEs who share GDPR consents</description>
    <label>Legal Entity Group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>