force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_Nationality__c.field-meta.xml
<CustomField>
    <fullName>XC_Nationality__c</fullName>
    <label>Nationality</label>
    <length>20</length>
    <type>Text</type>
</CustomField>