force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_PhonePrefix__c.field-meta.xml
<CustomField>
    <fullName>XC_PhonePrefix__c</fullName>
    <description>XC_PhonePrefix Default</description>
    <label>PhonePrefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>