force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_Preferredlanguageofcontact__c.field-meta.xml
<CustomField>
    <fullName>XC_Preferredlanguageofcontact__c</fullName>
    <description>Preferred Language of Contact default for LegalEntity.</description>
    <label>Default Language of Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>