force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_Skip_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>XC_Skip_Pipeline__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Skip Pipeline</label>
    <type>Checkbox</type>
</CustomField>