force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_SkipContractGeneration__c.field-meta.xml
<CustomField>
    <fullName>XC_SkipContractGeneration__c</fullName>
    <label>Skip Contract Generation Ext Partner</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>