force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_SkipDuplicationOpportunity__c.field-meta.xml
<CustomField>
    <fullName>XC_SkipDuplicationOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Duplication on Opportunity</label>
    <type>Checkbox</type>
</CustomField>