force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_SkipDuplOppChannels__c.field-meta.xml
<CustomField>
    <fullName>XC_SkipDuplOppChannels__c</fullName>
    <label>Skip Duplication Opportuntiy Channels</label>
    <length>60</length>
    <type>Text</type>
</CustomField>