force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_Stream__c.field-meta.xml
<CustomField>
    <fullName>XC_Stream__c</fullName>
    <label>Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
                <default>true</default>
                <label>B2B</label>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
            <value>
                <fullName>B2G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>