force-app/main/default/objects/XC_CM_CountryLegalEntityAssociation__mdt/fields/XC_WorkOrderWasteDisposalBlock__c.field-meta.xml
<CustomField>
    <fullName>XC_WorkOrderWasteDisposalBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RB_CRM_B2C_Y: Checkbox field used for CR NR1757 (WEEE Traceability). It is set to true if the documentation on work order is needed.</description>
    <label>WorkOrder Waste Disposal Block</label>
    <type>Checkbox</type>
</CustomField>